test/libsolidity/syntaxTests/contractBaseLocation/layout_specification_underflow_value.sol
contract A layout at 0 - 1 {}
// ----
// TypeError 1763: (21-26): Contract storage base location must be in range of type uint256. Current type is int_const -1 Cannot implicitly convert signed literal to unsigned type.
